--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es6",
+    "module": "commonjs",
+    "watch": true,
     "typeRoots": [
       "node_modules/@types"
     ],
