--- a/package.json
+++ b/package.json
@@ -19,56 +19,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@angular/animations": "6.0.5",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/router": "6.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.1",
     "@types/nedb": "^1.8.5",
-    "angular": "^1.6.10",
+    "angular": "^1.7.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.7",
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-windows-notifications": "^2.0.1",
+    "electron-windows-notifications": "^2.1.1",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "jquery": "^3.3.1",
     "nedb": "^1.8.0",
-    "rxjs": "^5.5.6",
+    "node-notifier": "^5.2.1",
+    "path": "^0.12.7",
+    "rxjs": "^6.2.1",
     "sort-object-array": "^1.0.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
-    "@types/jasmine": "^2.8.7",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/language-service": "6.0.5",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.108",
+    "@types/node": "^6.0.113",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codelyzer": "^4.3.0",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "1.8.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "2.7.2"
   },
   "config": {
     "forge": {
